added HtmlWebpackPlugin to create index html

--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "react-starter-kit",
   "version": "1.0.0",
-  "description": "A starter kit for creating react applications built from scratch",
+  "description":
+    "A starter kit for creating react applications built from scratch",
   "main": "index.js",
   "author": "saranshkataria",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
     "webpack": "^4.4.1"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.1.0",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   }
 }
