--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "babel-loader": "^8.0.0-beta.2",
+    "webpack-cli": "^2.0.13",
     "webpack": "^4.4.1"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.1.0",
     "react-hot-loader": "^4.0.1",
-    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   }
 }
