added babel runtime to import polyfills

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,16 @@
         }
       }
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
   ]
 }
