--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/runtime": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
-    "webpack-cli": "^2.0.13",
-    "webpack": "^4.4.1"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.1.0",
